listing establishments and creating new establishments

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjXpLdxz5N0rUmYn5Fsymnp60j9S49C_8&libraries=places"></script>
+
     <script defer src="https://use.fontawesome.com/releases/v5.1.1/js/all.js" integrity="sha384-BtvRZcyfv4r0x/phJt9Y9HhnN5ur1Z+kZbKVgzVBAlQZX4jvAuImlIz+bG7TS00a" crossorigin="anonymous"></script>
 
     <title>React App</title>
